test/cases/compile_errors/panic_called_at_compile_time.zig
export fn entry() void {
    comptime {
        @panic(
            "aoeu",
        );
    }
}

// error
// backend=stage2
// target=native
//
// :3:9: error: encountered @panic at comptime
